--- a/css/dashboard.css
+++ b/css/dashboard.css
@@ -1,5 +1,5 @@
 * {
-
+  font-family: 'Roboto', sans-serif;
 }
 
 .row{
@@ -62,7 +62,7 @@
 }
 
 .nav{
-  background-color: blue;
+  background-color: #318BFF;
   box-shadow: 0 2px 0 grey;
   margin: auto;
   text-align: center;
@@ -71,7 +71,7 @@
 }
 
 .nav .navItem:hover{
-  background-color: red;
+  background-color: #15BFB9;
 }
 
 #addNew{
@@ -83,4 +83,5 @@
 
 .addNewText{
   text-align: center;
+  font-weight: 500;
 }
